# photomap

./: .#continue.sh  .gitignore  AI_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  COMMIT_INSTRUCTIONS.md  COMPLETION_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DOCS_INDEX.md  EXIF_IMPROVEMENTS.md  GEMINI.md  GITHUB_COMMIT.md  GITIGNORE_FIX.md  HEIC_INVESTIGATION.md  HEIC_QUICK_REF.md  INSTRUCTIONS_RU.txt  OPTIMIZATION.md  PERMANENT_SOLUTION.md  PROJECT_MAP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_RECOMMENDATIONS.md  ROADMAP.md  SOLUTIONS.md  STATUS.md  TODO.md  UI_feature_list.md  VIBE_CODING.md  build.sh  check_scaling  continue.sh  dev.sh  entities.json  mempalace.yaml  photomap.ini  push.sh  temp_main.txt  (+3 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: audit.yml  build-exif-parser-test.yml  ci.yml  release.yml
.kiro/steering/: common-tasks.md  product.md  structure.md  tech.md
examples/: check_scaling.rs
exif_parser_test/: Cargo.toml  README.md
exif_parser_test/.github/workflows/: build-windows.yml
exif_parser_test/src/: gps_parser.rs  lib.rs  main.rs
folder_dialog_helper/: Cargo.toml
folder_dialog_helper/src/: main.rs
frontend/: index.html  script.js  style.css
photos/: IMG_0002.HEIC  IMG_0003.HEIC
src/: constants.rs  database.rs  exif_parser.rs  folder_picker.rs  geocoding.rs  html_template.rs  image_processing.rs  main.rs  main.rs.backup  main_clean.rs  main_translated.rs  process_manager.rs  processing.rs  server.rs  settings.rs  utils.rs
src/exif_parser/: generic.rs  gps_parser.rs  heic.rs  jpeg.rs  mod.rs
src/server/: events.rs  handlers.rs  mod.rs  state.rs
src/utils/: app_paths.rs  browser.rs  folder_picker.rs
tools/exif_parser_test/: README.md
tools/geodata_builder/: Cargo.toml  README.md
tools/geodata_builder/src/: main.rs
