[package]
name = "photomap_processor"
version = "0.6.2"
edition = "2021"
description = "Параллельная обработка фотографий: извлечение GPS из EXIF, создание миниатюр и генерация интерактивной карты"
authors = ["PhotoMap Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/photomap"
keywords = ["photo", "gps", "exif", "map", "leaflet"]
categories = ["graphics", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
ignore = "0.4"
image = "0.25"
exif = { package = "kamadak-exif", version = "0.6" }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-stream = "0.1"
libheif-rs = { version = "2.5", features = ["image"] }
turbojpeg = { version = "1.3.3", features = ["image"] }
mime_guess = "2.0"
rust-embed = "8.0.0"
chrono = { version = "0.4", features = ["serde", "with-serde-json"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[profile.release]
opt-level = "z"     # Оптимизировать на размер вместо скорости
lto = "fat"         # Более агрессивная оптимизация
codegen-units = 1
strip = true
panic = "abort"

