[package]
name = "photomap_processor"
version = "0.9.9"
edition = "2021"
description = "Parallel photo processing: extract GPS from EXIF, create thumbnails, and generate an interactive map"
authors = ["PhotoMap Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/photomap"
keywords = ["photo", "gps", "exif", "map", "leaflet"]
categories = ["graphics", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
exif = { package = "kamadak-exif", version = "0.6" }
futures-core = "0.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal", "sync"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"] }
libheif-rs = { version = "2.0.0", features = ["image"] }
turbojpeg = { version = "1.3.3", features = ["image"] }
bincode = "1.3"
flate2 = "1.0"


[profile.release]
opt-level = "z"     # Optimize for size instead of speed
lto = "fat"         # More aggressive optimization
codegen-units = 1
strip = true
panic = "abort"

